// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - areas.content - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <ContentBlock
          actions={Object {}}
          blockId="areas.content_content"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "areas.content",
    },
    Object {},
  ],
]
`;

exports[`Mock render - areas.footer - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <ContentBlock
          actions={Object {}}
          blockId="areas.footer_content"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <FooterBlock
          actions={Object {}}
          blockId="areas.footer_footer"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "areas.footer",
    },
    Object {},
  ],
]
`;

exports[`Mock render - areas.header - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          actions={Object {}}
          blockId="areas.header_header"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          actions={Object {}}
          blockId="areas.header_content"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "areas.header",
    },
    Object {},
  ],
]
`;

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <ContentBlock
          actions={Object {}}
          blockId="default_content"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "default",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.content.style: border: 5px solid blue - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          actions={Object {}}
          blockId="properties.content.style: border: 5px solid blue_header"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          actions={Object {}}
          blockId="properties.content.style: border: 5px solid blue_content"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "border": "5px solid blue",
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <FooterBlock
          actions={Object {}}
          blockId="properties.content.style: border: 5px solid blue_footer"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "properties.content.style: border: 5px solid blue",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.footer.style: border: 5px solid blue - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          actions={Object {}}
          blockId="properties.footer.style: border: 5px solid blue_header"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          actions={Object {}}
          blockId="properties.footer.style: border: 5px solid blue_content"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <FooterBlock
          actions={Object {}}
          blockId="properties.footer.style: border: 5px solid blue_footer"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "border": "5px solid blue",
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "properties.footer.style: border: 5px solid blue",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.header.color: #4432a8  - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          actions={Object {}}
          blockId="properties.header.color: #4432a8 _header"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
            }
          }
          properties={
            Object {
              "color": "#4432a8",
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          actions={Object {}}
          blockId="properties.header.color: #4432a8 _content"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <FooterBlock
          actions={Object {}}
          blockId="properties.header.color: #4432a8 _footer"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "properties.header.color: #4432a8 ",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.header.style: border: 5px solid blue - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          actions={Object {}}
          blockId="properties.header.style: border: 5px solid blue_header"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "border": "5px solid blue",
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          actions={Object {}}
          blockId="properties.header.style: border: 5px solid blue_content"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <FooterBlock
          actions={Object {}}
          blockId="properties.header.style: border: 5px solid blue_footer"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "properties.header.style: border: 5px solid blue",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.header.theme: light - dark is default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          actions={Object {}}
          blockId="properties.header.theme: light - dark is default_header"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
            }
          }
          properties={
            Object {
              "theme": "light",
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          actions={Object {}}
          blockId="properties.header.theme: light - dark is default_content"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <FooterBlock
          actions={Object {}}
          blockId="properties.header.theme: light - dark is default_footer"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "properties.header.theme: light - dark is default",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.style: border: 5px solid blue - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          actions={Object {}}
          blockId="properties.style: border: 5px solid blue_header"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          actions={Object {}}
          blockId="properties.style: border: 5px solid blue_content"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <FooterBlock
          actions={Object {}}
          blockId="properties.style: border: 5px solid blue_footer"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-1mli136",
      "id": "properties.style: border: 5px solid blue",
    },
    Object {},
  ],
]
`;
